# Telemetry-Ingestion-Alert-Rules-Service

./: .dockerignore  .env.backup  .gitignore  .pre-commit-config.yaml  API_TESTING_GUIDE.md  BRANCH_PROTECTION_GUIDE.md  BRANCH_PROTECTION_SUMMARY.md  DOCKER_PIPELINE_GUIDE.md  DOCKER_PIPELINE_README.md  Dockerfile  IMAGE_SCANNER_GUIDE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-setup.sh  init.sql  install_deps.sh  openapi.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  branch-protection.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  docker-build.yml  docker-hub-push.yml
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py  middleware.py  models.py  rule_engine.py  schemas.py  stream_manager.py
app/routes/: auth.py  exports.py  health.py  streams.py  telemetry.py  zones.py
app/scripts/: seed.py
scripts/: docker-operations.sh  image-scan.sh  load_test.py  quick-test.sh  setup-branch-protection.sh  setup-dev-environment.sh  test-branch-protection.sh
seeds/: rules.json  zones.geojson
tests/: __init__.py  test_exports.py  test_health.py  test_middleware.py  test_rule_engine.py  test_streams.py  test_zones.py
